# finance-analysis-app

./: README.md
backend-finance-app/: auth.py  db.py  main.py  pyproject.toml  test.txt
backend-finance-app/routes/: analytics.py  auth.py  categories.py  transactions.py
frontend-finance-app/: index.html  package-lock.json  package.json  test.txt
frontend-finance-app/src/: App.jsx  index.css  main.jsx
frontend-finance-app/src/api/: client.js
frontend-finance-app/src/components/AuthGate/: AuthGate.jsx  AuthGate.module.css
frontend-finance-app/src/components/Navbar/: Navbar.jsx  Navbar.module.css
frontend-finance-app/src/components/TransactionForm/: TransactionForm.jsx  TransactionForm.module.css
frontend-finance-app/src/components/TransactionList/: TransactionList.jsx  TransactionList.module.css
frontend-finance-app/src/context/: AuthContext.jsx  CategoriesContext.jsx
frontend-finance-app/src/hooks/: useTransactionFilters.js  useTransactions.js
frontend-finance-app/src/pages/Categories/: Categories.jsx  Categories.module.css
frontend-finance-app/src/pages/Dashboard/: Dashboard.jsx  Dashboard.module.css
frontend-finance-app/src/pages/Insights/: Insights.jsx  Insights.module.css
frontend-finance-app/src/pages/Transactions/: Transactions.jsx  Transactions.module.css
frontend-finance-app/src/utils/: format.js
